# snoopy

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  tic.json
Sample/: sample.pcap
src/: main.rs
src/args/: capture.rs  mod.rs  parse.rs
src/lib/: args.rs  mod.rs  packet_capture.rs  packet_parse.rs
src/lib/args/: capture.rs  mod.rs  parse.rs
