[package]
name = "snoop"
version = "0.1.0"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pcap = "0.7.0"
pktparse = {version = "*", features = ["derive"]}
dns-parser = "0.8"
tls-parser = "0.7"
hwaddr = "0.1.2"
nom = "*"
serde_json = "1.0"
serde = "1.0"
httparse = "*"
threadpool = "1.0"
num_cpus = "1.0"