[package]
name = "snoopy"
version = "0.3.0"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.0"
pcap = "0.7.0"
pktparse = {version = "0.4.0", features = ["derive"]}
dns-parser = "0.8"
tls-parser = "0.7"
hwaddr = "0.1.2"
nom = "5.0.0"
serde_json = "1.0"
serde = "1.0"
httparse = "*"
threadpool = "1.0"
num_cpus = "1.0"